                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-02-2006 added: Analog scrolling (triggers) to the button scroller.
 - 20-02-2006 fixed: Various initial control focus issues.
 - 20-02-2006 changed: Redid the Trainers dialog to use the DialogSettings base class.
 - 20-02-2006 fixed: Possible buffer overruns in setting and getting trainers settings from the database.
 - 19-02-2006 added: Initial support for Music Party Mode.  Enable it from the Library view as it requires the database.
 - 19-02-2006 changed: Refactored the window open and window close processes.
 - 18-02-2006 changed: "Delete" and "Rename" in the context menu are only enabled if the share supports them
 - 18-02-2006 changed: iTunes playlists now adhere to the "shuffle playlists on load" option if you use PLAY on them
 - 18-02-2006 changed: Keyboard updates all buttons with the same id when you change from Symbols -> Caps -> Lower case.
 - 18-02-2006 fixed: Video Calibration activated via the video OSD wasn't working.
 - 18-02-2006 fixed: Possible crashes in charset conversion.
 - 18-02-2006 changed: MultiImage only reads dir once instead of whenever it becomes visible.
 - 18-02-2006 fixed: Radiobutton nofocus image wasn't resized correctly (Thanks Nuka1195).
 - 18-02-2006 fixed: Volume and Seekbars could disappear and not reappear on switch from Fullscreen -> GUI.
 - 18-02-2006 fixed: WindowClose animations on DialogSelect and SettingsCategory windows.
 - 17-02-2006 changed: Update database -> Rescan database in strings.xml
 - 17-02-2006 fixed: my programs. don't try to launch nonexisting entries.
 - 17-02-2006 added: <radiowidth>, <radioheight>, <radioposx>, <radioposy> tags to radiobuttons.