@@ -1210,6 +1210,7 @@ const CGUIControl* CGUIWindow::GetControl(int iControl) const
   }
   return NULL;
 }
+
 int CGUIWindow::GetFocusedControl() const
 {
   for (int i = 0;i < (int)m_vecControls.size(); ++i)
